Modernize YangLibRestApp
Use Set.of() and make sure the service is not null.

Change-Id: I63c3feb978344ad08d794c3441890bfecb36d5cd
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>