@@ -5,10 +5,10 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.yanglib.impl;
 
-import java.util.Collections;
+import static java.util.Objects.requireNonNull;
+
 import java.util.Set;
 import javax.ws.rs.core.Application;
 import org.opendaylight.yanglib.api.YangLibService;
@@ -16,12 +16,12 @@ import org.opendaylight.yanglib.api.YangLibService;
 public class YangLibRestApp extends Application {
     private final YangLibService yangLibService;
 
-    public YangLibRestApp(YangLibService yangLibService) {
-        this.yangLibService = yangLibService;
+    public YangLibRestApp(final YangLibService yangLibService) {
+        this.yangLibService = requireNonNull(yangLibService);
     }
 
     @Override
     public Set<Object> getSingletons() {
-        return Collections.singleton(this.yangLibService);
+        return Set.of(yangLibService);
     }
 }
